<resources>
    <string name="app_name">Lets-Katikomi</string>


    <string name="mapTOdetail">詳細を表示</string>
    <string name="detailTOmap">マップを表示</string>
    <string name="mapTOsetting">設定</string>
    <string name="detailTOsetting">設定</string>
    <string name="settingTOmap">マップを表示</string>
    <string name="settingTOdetail">詳細を表示</string>
  
    <string name="todo">TODO</string>
    <string name="食堂">食堂</string>
    <string name="アトリエ">アトリエ</string>
    <string name="小講義室585">小講義室585</string>
    <string name="小講義室583">小講義室583</string>
    <string name="中講義室595">中講義室595</string>
    <string name="中講義室594">中講義室594</string>
    <string name="中講義室593">中講義室593</string>
    <string name="共同研究室">共同研究室</string>
    <string name="大学事務局">大学事務局</string>
    <string name="就活支援室483">就活支援室483</string>
    <string name="小講義室584">小講義室584</string>
    <string name="C_D493"><![CDATA[C&D493]]></string>
    <string name="就活支援室484">就活支援室484</string>
    <string name="講堂">講堂</string>
    <string name="体育館">体育館</string>
    <string name="コンピューター教室363">コンピューター教室363</string>
    <string name="情報ライブラリー">情報ライブラリー</string>
    <string name="C_D495"><![CDATA[C&D495]]></string>
    <string name="就活支援室485">就職支援室485</string>
    <string name="C_D494"><![CDATA[C&D494]]></string>
    <string name="コンピューター教室365">コンピューター教室365</string>
    <string name="大講義室">大講義室</string>
    <string name="社会連携センター">社会連携センター</string>
    <string name="ミュージアム">ミュージアム</string>
    <string name="コンピューター教室364">コンピューター教室364</string>
    <string name="売店">売店</string>
    <string name="_493">493</string>
    <string name="小講義室484">小講義室484</string>
    <string name="コンピューター教室483">コンピューター教室483</string>
    <string-array name="arrayFloor">
        <item>F1</item>
        <item>F2</item>
        <item>F3</item>
        <item>F4</item>
        <item>F5</item>
    </string-array>
</resources>